fixed lines visibility

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
 html, body, #map { width:100%; height:100%; margin:0; padding:0; z-index: 1; background: #000; }
 .leaflet-control { user-select: none;}
 .found { opacity: 30%; }
+.hidden { visibility: hidden; }
